--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">TextViewRichDrawable</string>
     <string name="title_text_views_demo">TextView</string>
     <string name="title_all_controls_demo">All controls</string>
+    <string name="title_runtime_change">Run Time Change</string>
+    <string name="click_below_button_change_drawable">Click Below Button Change Drawable</string>
 </resources>
